force-app/main/default/objects/Possivel_consumivel__c/Possivel_consumivel__c.object-meta.xml
<CustomObject>
    <label>Possível consumível</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possíveis consumíveis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>