force-app/main/default/objects/Possivel_consumivel__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <label>Contrato</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Possível consumível</relationshipLabel>
    <relationshipName>Poss_vel_consum_vel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>