force-app/main/default/objects/Possivel_consumivel__c/fields/Entrada_da_tabela_de_pre_os__c.field-meta.xml
<CustomField>
    <fullName>Entrada_da_tabela_de_pre_os__c</fullName>
    <label>Entrada da tabela de preços</label>
    <length>255</length>
    <type>Text</type>
</CustomField>