force-app/main/default/objects/Possivel_consumivel__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Possível consumível</relationshipLabel>
    <relationshipName>Poss_vel_consum_vel</relationshipName>
    <type>Lookup</type>
</CustomField>